--- a/public/css/app.css
+++ b/public/css/app.css
@@ -627,6 +627,11 @@ video {
   margin: auto;
 }
 
+.mx-0 {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
 .mx-1 {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
@@ -672,6 +677,10 @@ video {
   margin-bottom: auto;
 }
 
+.-mb-10 {
+  margin-bottom: -2.5rem;
+}
+
 .mb-0 {
   margin-bottom: 0px;
 }
@@ -702,6 +711,10 @@ video {
 
 .mb-5 {
   margin-bottom: 1.25rem;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
 }
 
 .ml-5 {
@@ -758,14 +771,6 @@ video {
 
 .mt-9 {
   margin-top: 2.25rem;
-}
-
-.ml-10 {
-  margin-left: 2.5rem;
-}
-
-.-mb-10 {
-  margin-bottom: -2.5rem;
 }
 
 .block {
@@ -1055,7 +1060,7 @@ video {
 
 .border-green {
   --tw-border-opacity: 1;
-  border-color: rgb(179 144 62 / var(--tw-border-opacity));
+  border-color: rgb(0 100 1 / var(--tw-border-opacity));
 }
 
 .border-lightgray {
@@ -1065,27 +1070,27 @@ video {
 
 .border-lightgreen {
   --tw-border-opacity: 1;
-  border-color: rgb(239 210 110 / var(--tw-border-opacity));
+  border-color: rgb(216 193 30 / var(--tw-border-opacity));
 }
 
 .bg-darkgray {
   --tw-bg-opacity: 1;
-  background-color: rgb(4 32 54 / var(--tw-bg-opacity));
+  background-color: rgb(5 22 26 / var(--tw-bg-opacity));
 }
 
 .bg-darkgreen {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 77 71 / var(--tw-bg-opacity));
+  background-color: rgb(7 46 51 / var(--tw-bg-opacity));
 }
 
 .bg-green {
   --tw-bg-opacity: 1;
-  background-color: rgb(179 144 62 / var(--tw-bg-opacity));
+  background-color: rgb(0 100 1 / var(--tw-bg-opacity));
 }
 
 .bg-lightgreen {
   --tw-bg-opacity: 1;
-  background-color: rgb(239 210 110 / var(--tw-bg-opacity));
+  background-color: rgb(216 193 30 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -1094,11 +1099,11 @@ video {
 }
 
 .fill-darkgreen {
-  fill: #004d47;
+  fill: #072E33;
 }
 
 .fill-green {
-  fill: #b3903e;
+  fill: #006401;
 }
 
 .fill-white {
@@ -1181,11 +1186,6 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
 .pb-1 {
   padding-bottom: 0.25rem;
 }
@@ -1202,6 +1202,10 @@ video {
   padding-bottom: 100%;
 }
 
+.pl-16 {
+  padding-left: 4rem;
+}
+
 .pl-2 {
   padding-left: 0.5rem;
 }
@@ -1216,14 +1220,6 @@ video {
 
 .pt-4 {
   padding-top: 1rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
-.pl-16 {
-  padding-left: 4rem;
 }
 
 .text-left {
@@ -1304,12 +1300,12 @@ video {
 
 .text-darkgray {
   --tw-text-opacity: 1;
-  color: rgb(4 32 54 / var(--tw-text-opacity));
+  color: rgb(5 22 26 / var(--tw-text-opacity));
 }
 
 .text-darkgreen {
   --tw-text-opacity: 1;
-  color: rgb(0 77 71 / var(--tw-text-opacity));
+  color: rgb(7 46 51 / var(--tw-text-opacity));
 }
 
 .text-gray-300 {
@@ -1339,7 +1335,7 @@ video {
 
 .text-green {
   --tw-text-opacity: 1;
-  color: rgb(179 144 62 / var(--tw-text-opacity));
+  color: rgb(0 100 1 / var(--tw-text-opacity));
 }
 
 .text-lightgray {
@@ -1349,7 +1345,7 @@ video {
 
 .text-lightgreen {
   --tw-text-opacity: 1;
-  color: rgb(239 210 110 / var(--tw-text-opacity));
+  color: rgb(216 193 30 / var(--tw-text-opacity));
 }
 
 .text-pink-600 {
@@ -1431,23 +1427,23 @@ video {
 
 .btn-lightgreen {
   --tw-bg-opacity: 1;
-  background-color: rgb(239 210 110 / var(--tw-bg-opacity));
+  background-color: rgb(216 193 30 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
-  color: rgb(0 77 71 / var(--tw-text-opacity));
+  color: rgb(7 46 51 / var(--tw-text-opacity));
 }
 
 .btn-lightgreen:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(179 144 62 / var(--tw-bg-opacity));
+  background-color: rgb(0 100 1 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
-  color: rgb(239 210 110 / var(--tw-text-opacity));
+  color: rgb(216 193 30 / var(--tw-text-opacity));
 }
 
 .btn-green {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 77 71 / var(--tw-bg-opacity));
+  background-color: rgb(7 46 51 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
-  color: rgb(239 210 110 / var(--tw-text-opacity));
+  color: rgb(216 193 30 / var(--tw-text-opacity));
 }
 
 /* rotate */
@@ -1575,7 +1571,7 @@ video {
 
 .swiper-pagination-bullet-active {
   --tw-bg-opacity: 1;
-  background-color: rgb(179 144 62 / var(--tw-bg-opacity));
+  background-color: rgb(0 100 1 / var(--tw-bg-opacity));
 }
 
 .swiper-button-prev::after {
@@ -1647,7 +1643,7 @@ video {
   font-weight: 500;
   text-transform: uppercase;
   --tw-text-opacity: 1;
-  color: rgb(4 32 54 / var(--tw-text-opacity));
+  color: rgb(5 22 26 / var(--tw-text-opacity));
 }
 
 /* garis progress */
@@ -1658,7 +1654,7 @@ video {
   width: 100%;
   border-radius: 9999px;
   --tw-bg-opacity: 1;
-  background-color: rgb(239 210 110 / var(--tw-bg-opacity));
+  background-color: rgb(216 193 30 / var(--tw-bg-opacity));
   content: '';
 }
 
@@ -1667,7 +1663,7 @@ video {
   height: 0.25rem;
   border-radius: 9999px;
   --tw-bg-opacity: 1;
-  background-color: rgb(179 144 62 / var(--tw-bg-opacity));
+  background-color: rgb(0 100 1 / var(--tw-bg-opacity));
   content: '';
 }
 
@@ -1682,7 +1678,7 @@ video {
   width: 0px;
   overflow: hidden;
   --tw-bg-opacity: 1;
-  background-color: rgb(4 32 54 / var(--tw-bg-opacity));
+  background-color: rgb(5 22 26 / var(--tw-bg-opacity));
   transition-property: all;
   transition-duration: 500ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1717,7 +1713,7 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   padding-left: 0.75rem;
   --tw-text-opacity: 1;
-  color: rgb(4 32 54 / var(--tw-text-opacity));
+  color: rgb(5 22 26 / var(--tw-text-opacity));
 }
 
 .sidebar-menu li {
@@ -1734,7 +1730,7 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   padding-left: 0.75rem;
   --tw-text-opacity: 1;
-  color: rgb(4 32 54 / var(--tw-text-opacity));
+  color: rgb(5 22 26 / var(--tw-text-opacity));
 }
 
 .profil {
@@ -1798,12 +1794,12 @@ video {
 
 .hover\:bg-green:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(179 144 62 / var(--tw-bg-opacity));
+  background-color: rgb(0 100 1 / var(--tw-bg-opacity));
 }
 
 .hover\:text-green:hover {
   --tw-text-opacity: 1;
-  color: rgb(179 144 62 / var(--tw-text-opacity));
+  color: rgb(0 100 1 / var(--tw-text-opacity));
 }
 
 .hover\:text-white:hover {
@@ -1819,12 +1815,12 @@ video {
 
 .group:hover .group-hover\:text-green {
   --tw-text-opacity: 1;
-  color: rgb(179 144 62 / var(--tw-text-opacity));
+  color: rgb(0 100 1 / var(--tw-text-opacity));
 }
 
 .group:hover .group-hover\:text-lightgreen {
   --tw-text-opacity: 1;
-  color: rgb(239 210 110 / var(--tw-text-opacity));
+  color: rgb(216 193 30 / var(--tw-text-opacity));
 }
 
 @media (min-width: 640px) {
@@ -1866,10 +1862,6 @@ video {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
-  .sm\:pl-16 {
-    padding-left: 4rem;
-  }
-
   .sm\:pl-0 {
     padding-left: 0px;
   }
@@ -1907,10 +1899,6 @@ video {
 
   .md\:border-none {
     border-style: none;
-  }
-
-  .md\:pl-16 {
-    padding-left: 4rem;
   }
 }
 
@@ -1987,7 +1975,7 @@ video {
 
   .lg\:bg-green {
     --tw-bg-opacity: 1;
-    background-color: rgb(179 144 62 / var(--tw-bg-opacity));
+    background-color: rgb(0 100 1 / var(--tw-bg-opacity));
   }
 
   .lg\:p-3 {
@@ -2008,14 +1996,6 @@ video {
     padding-bottom: 0px;
   }
 
-  .lg\:pl-16 {
-    padding-left: 4rem;
-  }
-
-  .lg\:pl-0 {
-    padding-left: 0px;
-  }
-
   .lg\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -2034,7 +2014,7 @@ video {
 
   .lg\:hover\:bg-darkgreen:hover {
     --tw-bg-opacity: 1;
-    background-color: rgb(0 77 71 / var(--tw-bg-opacity));
+    background-color: rgb(7 46 51 / var(--tw-bg-opacity));
   }
 
   .group:hover .lg\:group-hover\:scale-110 {
