--- a/public/css/app.css
+++ b/public/css/app.css
@@ -725,6 +725,10 @@ video {
   margin-left: auto;
 }
 
+.mr-1 {
+  margin-right: 0.25rem;
+}
+
 .mr-2 {
   margin-right: 0.5rem;
 }
@@ -883,10 +887,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-96 {
-  width: 24rem;
 }
 
 .flex-1 {
@@ -1773,16 +1773,6 @@ video {
   width: 2rem;
 }
 
-.after\:w-\[60\%\]::after {
-  content: var(--tw-content);
-  width: 60%;
-}
-
-.after\:w-\[80\%\]::after {
-  content: var(--tw-content);
-  width: 80%;
-}
-
 .hover\:cursor-pointer:hover {
   cursor: pointer;
 }
@@ -1985,11 +1975,6 @@ video {
   .lg\:py-2 {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
-  }
-
-  .lg\:px-1 {
-    padding-left: 0.25rem;
-    padding-right: 0.25rem;
   }
 
   .lg\:pb-0 {
