--- a/public/css/src/input.css
+++ b/public/css/src/input.css
@@ -170,3 +170,9 @@
 .box {
   @apply min-w-[200px] p-5 h-40 bg-white shadow-xl rounded-lg flex justify-center items-center
 }
+
+
+/* form */
+.form-input {
+  @apply shadow-md border-2 border-green rounded-lg block mt-2 py-2 px-3 w-full text-darkgreen outline-none focus:shadow-lightgray transition-300 text-sm
+}
